# codegraph-gen

./: .codegraphrc  .gitignore  README.md  pyproject.toml
src/codegraph/: __main__.py  ai.py  analyzer.py  builder.py  cluster.py  config.py  detect.py  engine.py  exporter.py  renderer.py  writer.py
src/codegraph/parser/: __init__.py  base.py  cpp.py  go.py  javascript.py  kotlin.py  python.py  rust.py  swift.py
src/codegraph_gen/: __main__.py  builder.py  cluster.py  config.py  detect.py  engine.py  renderer.py  resolver.py  resolver_context.py  resolver_steps.py  resolver_strategy.py  schema.py  scope.py  visualizer.py  writer.py
src/codegraph_gen/parser/: __init__.py  base.py  cpp.py  go.py  javascript.py  kotlin.py  ocaml.py  python.py  rust.py  swift.py
tests/: test_codegraph.py  test_ocaml.py  test_registry.py  test_resolver.py  test_resolver_steps.py  test_scope_resolution.py  test_scope_tracker.py  test_visitor_composition.py
