[project]
name = "codegraph-gen"
version = "0.2.0"
description = "AST-based codebase knowledge graph generator in Markdown"
readme = "README.md"
authors = [
    { name = "twn39", email = "twn39@163.com" }
]
license = { text = "MIT" }
keywords = [
    "knowledge-graph",
    "ast",
    "codebase",
    "markdown",
    "tree-sitter",
    "visualization",
    "static-analysis",
    "ai-agent",
    "obsidian",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-swift",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-kotlin>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[project.urls]
Homepage = "https://github.com/twn39/codegraph"
Repository = "https://github.com/twn39/codegraph"
Issues = "https://github.com/twn39/codegraph/issues"

[project.scripts]
codegraph = "codegraph_gen.__main__:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

